[package]
name = "plantsvszombies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
# avian2d = "0.1"
# bevy_rapier2d = { version = "0.26.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy_ecs_ldtk = "0.10.0"